--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content >
+<img src="data/com.ionicframework.agrolink/files/OCDOS1/1/1514319048439.png"/>
     <ion-list  style="margin-top:2%">
       <button ion-item (click)="openPage(1)" >
           <ion-icon ios="ios-clipboard" md="md-clipboard" item-start></ion-icon>
