--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,12 +6,9 @@
     <ion-title>{{rol}} - {{user}}</ion-title>
   </ion-navbar>
 </ion-header>
-<!--file:///data/data/com.ionicframework.agrolink/files/
- file:///storage/emulated/0/Android/data/com.ionicframew ork.agrolink/files/OPTS1/1-->
 
 <ion-content >
-<ion-img src="file:///Android/data/com.ionicframework.agrolink/files/OPTS1/1/1514402864384.png"></ion-img>
-<img src="file:///Android/data/com.ionicframework.agrolink/files/OPTS1/1/1514402864384.png"/>
+    <img width="100" (click)="abririmagen('http://cdn.imagentv.com/resources/defaults/v2/imagen_default300.png')"  src="http://cdn.imagentv.com/resources/defaults/v2/imagen_default300.png" />
     <ion-list  style="margin-top:2%">
       <button ion-item (click)="openPage(1)" >
           <ion-icon ios="ios-clipboard" md="md-clipboard" item-start></ion-icon>
