--- a/src/pages/formularios/formularios.html
+++ b/src/pages/formularios/formularios.html
@@ -108,25 +108,25 @@
                 <ion-datetime displayFormat="YYYY-MM-DD" cancelText="Cancelar" doneText="Guardar" [(ngModel)]="opciones.respuesta" (ionChange)="guardarfecha(opciones, item.codigo, item.codigorespuesta, $event)"></ion-datetime>
               </ion-item>
               <div *ngIf="item.archivo===1">
-                  <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>                              
+                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
 
                 <ion-item *ngIf="opciones.ruta">
-                    <ion-avatar item-start>
-                        <img width="200" height="80" (click)="verimagen('http://cdn.imagentv.com/resources/defaults/v2/imagen_default300.png')" *ngIf="opciones.ruta" src="http://cdn.imagentv.com/resources/defaults/v2/imagen_default300.png" />
-                      </ion-avatar>
-                      
-                      <ion-grid>
-                          <ion-row>
-                              <ion-col col-8>
-                                  <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>                              
-                                </ion-col>
-                              <ion-col col-4>
-                                  <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+                  <ion-avatar item-start>
+                    <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                  </ion-avatar>
 
-                              </ion-col>
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col col-8>
+                        <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                      </ion-col>
+                      <ion-col col-4>
+                        <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
 
-                            </ion-row>
-                        </ion-grid>
+                      </ion-col>
+
+                    </ion-row>
+                  </ion-grid>
                 </ion-item>
               </div>
 
@@ -137,9 +137,26 @@
                 <ion-datetime displayFormat="YYYY-MM-DD" cancelText="Cancelar" doneText="Guardar" (ionChange)="guardarfecha(opciones, item.codigo, item.codigorespuesta, $event)"></ion-datetime>
               </ion-item>
               <div *ngIf="item.archivo===1">
-                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                <p>{{rutaimg+'/'+opciones.ruta}}</p>
-                <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+                <ion-item *ngIf="opciones.ruta">
+                  <ion-avatar item-start>
+                    <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                  </ion-avatar>
+
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col col-8>
+                        <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                      </ion-col>
+                      <ion-col col-4>
+                        <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                      </ion-col>
+
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
               </div>
             </div>
 
@@ -154,21 +171,55 @@
                 <ion-input type="number" [(ngModel)]="opciones.respuesta" (Change)="guardarnumero(opciones, item.codigo, item.codigorespuesta, opciones.respuesta)"></ion-input>
               </ion-item>
               <div *ngIf="item.archivo===1">
-                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                <p>{{rutaimg+'/'+opciones.ruta}}</p>
-                <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+                <ion-item *ngIf="opciones.ruta">
+                  <ion-avatar item-start>
+                    <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                  </ion-avatar>
+
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col col-8>
+                        <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                      </ion-col>
+                      <ion-col col-4>
+                        <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                      </ion-col>
+
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
               </div>
 
             </div>
             <div *ngIf="!opciones.respuesta">
               <ion-item>
-                <ion-label stacked>{{item.enunciado}} false</ion-label>
+                <ion-label stacked>{{item.enunciado}} </ion-label>
                 <ion-input type="number" [(ngModel)]="item.identificador" (change)="guardarnumero(opciones, item.codigo, item.codigorespuesta,item.identificador )"></ion-input>
               </ion-item>
               <div *ngIf="item.archivo===1">
-                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                <p>{{rutaimg+'/'+opciones.ruta}}</p>
-                <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+                <ion-item *ngIf="opciones.ruta">
+                  <ion-avatar item-start>
+                    <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                  </ion-avatar>
+
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col col-8>
+                        <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                      </ion-col>
+                      <ion-col col-4>
+                        <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                      </ion-col>
+
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
               </div>
             </div>
 
@@ -183,20 +234,55 @@
                 <ion-input type="text" [(ngModel)]="opciones.respuesta" (Change)="guardar3003(opciones, item.codigo, item.codigorespuesta, opciones.respuesta)"></ion-input>
               </ion-item>
               <div *ngIf="item.archivo===1">
-                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                <p>{{rutaimg+'/'+opciones.ruta}}</p>
-                <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+                <ion-item *ngIf="opciones.ruta">
+                  <ion-avatar item-start>
+                    <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                  </ion-avatar>
+
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col col-8>
+                        <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                      </ion-col>
+                      <ion-col col-4>
+                        <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                      </ion-col>
+
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
               </div>
 
             </div>
             <div *ngIf="!opciones.respuesta">
               <ion-item>
-                <ion-label stacked>{{item.enunciado}} false</ion-label>
+                <ion-label stacked>{{item.enunciado}} </ion-label>
                 <ion-input type="text" (change)="guardar3003(opciones, item.codigo, item.codigorespuesta,$event.target.value)"></ion-input>
               </ion-item>
               <div *ngIf="item.archivo===1">
-                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+                <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+                <ion-item *ngIf="opciones.ruta">
+                  <ion-avatar item-start>
+                    <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                  </ion-avatar>
+
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col col-8>
+                        <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                      </ion-col>
+                      <ion-col col-4>
+                        <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                      </ion-col>
+
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
               </div>
             </div>
           </div>
@@ -204,7 +290,7 @@
       </div>
 
       <div *ngIf="item.tipo==3001">
-
+        <!--seleccion nmultiple con unica respuesta -->
         <ion-item>
           <ion-label style="color:#000000">{{item.enunciado}}</ion-label>
           <ion-select (ionChange)="guardar3001($event, item.codigo ,item.codigorespuesta)">
@@ -212,15 +298,36 @@
           </ion-select>
         </ion-item>
         <div *ngIf="item.archivo===1">
-            <div *ngFor="let opciones of item.respuestas;  let i = index">
-                <div *ngIf="i==0">  
-          <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-          <p>{{rutaimg+'/'+opciones.ruta}}</p>
-          <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+          <div *ngFor="let opciones of item.respuestas;  let i = index">
+            <div *ngIf="i==0">
+              <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+              <ion-item *ngIf="opciones.ruta">
+                <ion-avatar item-start>
+                  <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                </ion-avatar>
+
+                <ion-grid>
+                  <ion-row>
+                    <ion-col col-8>
+                      <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                    </ion-col>
+                    <ion-col col-4>
+                      <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                    </ion-col>
+
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+
+            </div>
+          </div>
         </div>
       </div>
-        </div>
-      </div>
+
+
+
+
 
       <div *ngIf="item.tipo==3002">
         <!--seleccion nmultiple con multiple respuesta -->
@@ -231,15 +338,36 @@
           </ion-select>
         </ion-item>
         <div *ngIf="item.archivo===1">
-            <div *ngFor="let opciones of item.respuestas;  let i = index">
-                <div *ngIf="i==0">  
-          <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-          <p>{{rutaimg+'/'+opciones.ruta}}</p>
-          <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
+          <div *ngFor="let opciones of item.respuestas;  let i = index">
+            <div *ngIf="i==0">
+              <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+              <ion-item *ngIf="opciones.ruta">
+                <ion-avatar item-start>
+                  <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                </ion-avatar>
+
+                <ion-grid>
+                  <ion-row>
+                    <ion-col col-8>
+                      <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                    </ion-col>
+                    <ion-col col-4>
+                      <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                    </ion-col>
+
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+
+            </div>
+          </div>
         </div>
       </div>
-        </div>
-      </div>
+
+
+
 
       <div *ngIf="item.tipo==3004">
         <!--seleccion multiple unica respueista y abierta -->
@@ -252,45 +380,82 @@
         </ion-item>
         <div *ngFor="let opciones of item.respuestas;  let i = index">
           <div *ngIf="i==0">
-              <ion-item>
-                  <ion-input type="text" [(ngModel)]="opciones.observacion" placeholder="observacion" (change)="guardarobservacion( item.codigo, item.codigorespuesta,opciones.observacion )">
-                  </ion-input>
-                </ion-item>
-                <div *ngIf="item.archivo===1">
-                  <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                  <p>{{rutaimg+'/'+opciones.ruta}}</p>
-                  <img width="80%" height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
-                </div>
-                </div>
+            <ion-item>
+              <ion-input type="text" [(ngModel)]="opciones.observacion" placeholder="observacion" (change)="guardarobservacion( item.codigo, item.codigorespuesta,opciones.observacion )">
+              </ion-input>
+            </ion-item>
+            <div *ngIf="item.archivo===1">
+              <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+              <ion-item *ngIf="opciones.ruta">
+                <ion-avatar item-start>
+                  <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                </ion-avatar>
+
+                <ion-grid>
+                  <ion-row>
+                    <ion-col col-8>
+                      <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                    </ion-col>
+                    <ion-col col-4>
+                      <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                    </ion-col>
+
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </div>
+          </div>
 
         </div>
       </div>
 
-      <div *ngIf="item.tipo==3005">
-          <!--seleccion nmultiple con multiple respuesta y abierta -->
-          <ion-item no-lines>
-            <ion-label style="color:black">{{item.enunciado}}</ion-label>
-            <ion-select multiple="true" (ionChange)="guardar3002($event, item.codigo, item.codigorespuesta)">
-              <!--(ionChange)="onChange($event, preguntas.id)"-->
-              <ion-option *ngFor="let opciones of item.respuestas" [value]="opciones" selected="{{opciones.respuesta}}">{{opciones.nombre}}</ion-option>
-            </ion-select>
-          </ion-item>
-          <div *ngFor="let opciones of item.respuestas;  let i = index">
-              <div *ngIf="i==0">
-                  <ion-item>
-                      <ion-input type="text" [(ngModel)]="opciones.observacion" placeholder="observacion" (change)="guardarobservacion( item.codigo, item.codigorespuesta,opciones.observacion )">
-                      </ion-input>
-                    </ion-item>
-                    <div *ngIf="item.archivo===1">
-                      <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">Adjuntar imagen..</a>
-                      <p>{{rutaimg+'/'+opciones.ruta}}</p>
-                      <img width="  " height="80" *ngIf="opciones.ruta" [src]="rutaimg+'/'+opciones.ruta" />
-                    </div>
 
-                    </div>
-    
+
+
+      <div *ngIf="item.tipo==3005">
+        <!--seleccion nmultiple con multiple respuesta y abierta -->
+        <ion-item no-lines>
+          <ion-label style="color:black">{{item.enunciado}}</ion-label>
+          <ion-select multiple="true" (ionChange)="guardar3002($event, item.codigo, item.codigorespuesta)">
+            <!--(ionChange)="onChange($event, preguntas.id)"-->
+            <ion-option *ngFor="let opciones of item.respuestas" [value]="opciones" selected="{{opciones.respuesta}}">{{opciones.nombre}}</ion-option>
+          </ion-select>
+        </ion-item>
+        <div *ngFor="let opciones of item.respuestas;  let i = index">
+          <div *ngIf="i==0">
+            <ion-item>
+              <ion-input type="text" [(ngModel)]="opciones.observacion" placeholder="observacion" (change)="guardarobservacion( item.codigo, item.codigorespuesta,opciones.observacion )">
+              </ion-input>
+            </ion-item>
+            <div *ngIf="item.archivo===1">
+              <a (click)="presentConfirm(item.codigo, item.codigorespuesta)" *ngIf="!opciones.ruta">Adjuntar Imagen</a>
+
+              <ion-item *ngIf="opciones.ruta">
+                <ion-avatar item-start>
+                  <img (click)="verimagen(rutaimg+'/'+opciones.ruta)" *ngIf="opciones.ruta" src="{{rutaimg+'/'+opciones.ruta}}" />
+                </ion-avatar>
+
+                <ion-grid>
+                  <ion-row>
+                    <ion-col col-8>
+                      <a (click)="presentConfirm(item.codigo, item.codigorespuesta)">cambiar imagen</a>
+                    </ion-col>
+                    <ion-col col-4>
+                      <a (click)="eliminarimagen(item.codigo, item.codigorespuesta)">Eliminar</a>
+
+                    </ion-col>
+
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
             </div>
+
+          </div>
+
         </div>
+      </div>
 
     </div>
 
