armado jason sincronizacion

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
           Ingrese aca para consultar las unidades productivas asignadas y el estado del trabajo en cada una de ellas 
         </p>
       </button>
-      <button ion-item  >
+      <button ion-item (click)="openPage(4)" >
           <ion-icon ios="ios-sync" md="md-sync" item-start></ion-icon>
         <h3 style="font-weight:bold">Sincronizacion De datos</h3>
         <p>
