--- a/src/pages/formularios/noconformidad.html
+++ b/src/pages/formularios/noconformidad.html
@@ -12,7 +12,8 @@
 </ion-header>
 
 <ion-content fullscreen>
-  <form #form="ngForm" (ngSubmit)="noconformidad(form.value)" novalidate>
+  {{pruebahtml}}
+  <form #form="ngForm" (ngSubmit)="noconformidad(form.value)" novalidate *ngIf="habilitartarea== false">
     <ion-item>
       <ion-label floating>Descripcion corta</ion-label>
       <ion-input type="text" name='descripcion' ngModel required #descripcion="ngModel" [class.invalid]="descripcion.errors && descripcion.dirty"></ion-input>
@@ -23,7 +24,7 @@
 
     <ion-item text-wrap>
       <ion-label stacked>detalle</ion-label>
-      <ion-textarea text-wrap type="text" name='detalle' ngModel required #detalle="ngModel" [class.invalid]="detalle.errors && detalle.dirty"></ion-textarea>
+      <ion-textarea text-wrap type="text" rows="4" name='detalle' ngModel required #detalle="ngModel" [class.invalid]="detalle.errors && detalle.dirty"></ion-textarea>
     </ion-item>
     <ion-item class="error-message" no-lines *ngIf="detalle.errors?.required && detalle.dirty">
       <p style="color:red">Detalle Requerido </p>
@@ -40,20 +41,48 @@
     </ion-item>
 
     <ion-item text-wrap no-lines>
-        <ion-label>
-          Fecha de posible solucion
-        </ion-label>
-        <ion-datetime displayFormat="YYYY-MM-DD" cancelText="Cancelar" doneText="Guardar" name="fecha" ngModel required #fecha="ngModel"  [class.invalid]="fecha.errors && fecha.dirty"></ion-datetime>
-      </ion-item>
-      <ion-item class="error-message" no-lines *ngIf="fecha.errors?.required && fecha.dirty">
-          <p style="color:red">Fecha de posible solucion Requerida </p>
-        </ion-item>
-    
+      <ion-label>
+        Fecha de posible solucion
+      </ion-label>
+      <ion-datetime displayFormat="YYYY-MM-DD" cancelText="Cancelar" doneText="Guardar" name="fecha" ngModel required #fecha="ngModel"
+        [class.invalid]="fecha.errors && fecha.dirty"></ion-datetime>
+    </ion-item>
+    <ion-item class="error-message" no-lines *ngIf="fecha.errors?.required && fecha.dirty">
+      <p style="color:red">Fecha de posible solucion Requerida </p>
+    </ion-item>
+
 
     <div padding>
-      <button ion-button color="secondary" style="border: 1px green solid;" block type="submit" [disabled]="!form.valid">Registrar</button>
+      <button ion-button color="secondary" style="border: 1px green solid;" block type="submit" [disabled]="!form.valid">GUARDAR</button>
     </div>
 
   </form>
+  <div *ngIf="habilitartarea">
+
+    <ion-item text-wrap no-lines>
+      Identificador : {{id}}
+    </ion-item>
+    <ion-item text-wrap no-lines>
+      <ion-label stacked>
+        descripcion
+      </ion-label>
+      <ion-input type="text" [(ngModel)]="descripcion" (change)="editarnoconformidad(id,'descripcion', descripcion)"></ion-input>
+    </ion-item>
+    <ion-item text-wrap no-lines>
+        <ion-label stacked>
+          detalle
+        </ion-label>
+        <ion-textarea rows="4"  [(ngModel)]="detalle" (change)="editarnoconformidad(id,'detalle', detalle)"></ion-textarea>        
+      </ion-item> 
+
+      <ion-item text-wrap no-lines>
+          <ion-label stacked>
+            fecha limite de cierre
+          </ion-label>
+          <ion-datetime  displayFormat="YYYY-MM-DD" cancelText="Cancelar" [(ngModel)]="fecha" doneText="Guardar" (ionChange)="editarnoconformidad(id,'fechaposiblecierre', fecha)" ></ion-datetime >
+          </ion-item>
+    <button ion-button color="secondary" (click)="agregartarea()">Agregar tarea</button>
+  </div>
+
 
 </ion-content>
