--- a/src/pages/formularios/formularios.html
+++ b/src/pages/formularios/formularios.html
@@ -29,7 +29,7 @@
 
 
 <ion-content>
-    <ion-fab bottom right  *ngIf="caso == 4">
+    <ion-fab bottom right  *ngIf="caso == 4" (click)="agregarnoconformidad(0)">
         <button ion-fab mini color="danger"><ion-icon name="add" ></ion-icon></button>
        </ion-fab>
        <ion-fab bottom right  *ngIf="caso == 5" (click)="agregarnoconformidad(0)">
